{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 372,
  "lineage": "686ec0b0-e02a-5f85-097d-85810480dd8a",
  "resources": [
    {
      "module": "module.EKS-us-east-1.module.eks_cluster.module.security_group[\"security-group-1\"].module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jungle_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:security-group/sg-0e5b9246b9e4600c2",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-0e5b9246b9e4600c2",
            "ingress": [],
            "name": "EX07-Test-1",
            "name_prefix": "",
            "owner_id": "186546413360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EX07-Test-1",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test-1",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-090177ddd35d0fb6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EKS-us-east-1.module.eks_cluster.module.security_group[\"security-group-1\"].module.security_group_rule[\"rule-1\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jungle_cluster_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "for communication",
            "from_port": 443,
            "id": "sgrule-3339581888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e5b9246b9e4600c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS-us-east-1.module.eks_cluster.module.security_group.module.security_group.aws_security_group.jungle_cluster_sg",
            "module.VPC-us-east-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EKS-us-east-1.module.eks_cluster.module.security_group[\"security-group-1\"].module.security_group_rule[\"rule-2\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jungle_cluster_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "rule for egress from k8s",
            "from_port": 0,
            "id": "sgrule-3172849662",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e5b9246b9e4600c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS-us-east-1.module.eks_cluster.module.security_group.module.security_group.aws_security_group.jungle_cluster_sg",
            "module.VPC-us-east-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:vpc/vpc-090177ddd35d0fb6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4860494801de605",
            "default_route_table_id": "rtb-0110c28bdaee7937a",
            "default_security_group_id": "sg-0019855c34da3e28c",
            "dhcp_options_id": "dopt-0d1a25e6b3e9a4646",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-090177ddd35d0fb6f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0110c28bdaee7937a",
            "owner_id": "186546413360",
            "tags": {
              "Name": "EX07-Test",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test",
              "Solution": "EX07",
              "Stage": "Test"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:internet-gateway/igw-076d429a8f5cd4092",
            "id": "igw-076d429a8f5cd4092",
            "owner_id": "186546413360",
            "tags": {
              "Name": "EX07-Test",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "vpc_id": "vpc-090177ddd35d0fb6f"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0417d097b5d723dd2",
            "network_interface_id": "eni-0e87e8192175847b1",
            "private_ip": "10.0.1.160",
            "subnet_id": "subnet-014d0a128d7b329d8",
            "tags": {
              "Name": "EX07-Test",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test",
              "Solution": "EX07",
              "Stage": "Test"
            }
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc",
            "module.VPC-us-east-1.module.subnet_public.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_table_association_private[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e37578831c725e2",
            "route_table_id": "rtb-0a3978d23f919b166",
            "subnet_id": "subnet-0c4cff3aceed9f5c1"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc",
            "module.VPC-us-east-1.module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.VPC-us-east-1.module.route_tables.aws_route_table.route_table_private",
            "module.VPC-us-east-1.module.subnet_private.aws_subnet.subnet_private",
            "module.VPC-us-east-1.module.subnet_public.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_table_association_private[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0315020da5b9fbcff",
            "route_table_id": "rtb-0a3978d23f919b166",
            "subnet_id": "subnet-0d84e2c06f90463a6"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc",
            "module.VPC-us-east-1.module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.VPC-us-east-1.module.route_tables.aws_route_table.route_table_private",
            "module.VPC-us-east-1.module.subnet_private.aws_subnet.subnet_private",
            "module.VPC-us-east-1.module.subnet_public.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_table_association_public[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9ef6226e7a2055d",
            "route_table_id": "rtb-0232c9e930e045ac7",
            "subnet_id": "subnet-014d0a128d7b329d8"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc",
            "module.VPC-us-east-1.module.internet_gateway.aws_internet_gateway.igw",
            "module.VPC-us-east-1.module.route_tables.aws_route_table.route_table_public",
            "module.VPC-us-east-1.module.subnet_public.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_table_association_public[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080c478c5e05ffc62",
            "route_table_id": "rtb-0232c9e930e045ac7",
            "subnet_id": "subnet-0a1c3b3519efdfdff"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc",
            "module.VPC-us-east-1.module.internet_gateway.aws_internet_gateway.igw",
            "module.VPC-us-east-1.module.route_tables.aws_route_table.route_table_public",
            "module.VPC-us-east-1.module.subnet_public.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:route-table/rtb-0a3978d23f919b166",
            "id": "rtb-0a3978d23f919b166",
            "owner_id": "186546413360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0417d097b5d723dd2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EX07-Test-Private",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test-Private",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-090177ddd35d0fb6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc",
            "module.VPC-us-east-1.module.nat_gateway.aws_nat_gateway.nat_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:route-table/rtb-0232c9e930e045ac7",
            "id": "rtb-0232c9e930e045ac7",
            "owner_id": "186546413360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-076d429a8f5cd4092",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EX07-Test-Public",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test-Public",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-090177ddd35d0fb6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc",
            "module.VPC-us-east-1.module.internet_gateway.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.subnet_private[\"subnet-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:subnet/subnet-0c4cff3aceed9f5c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c4cff3aceed9f5c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186546413360",
            "tags": {
              "Name": "EX07-Test-Private-1",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test-Private-1",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "vpc_id": "vpc-090177ddd35d0fb6f"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.subnet_private[\"subnet-2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:subnet/subnet-0d84e2c06f90463a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d84e2c06f90463a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186546413360",
            "tags": {
              "Name": "EX07-Test-Private-2",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test-Private-2",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "vpc_id": "vpc-090177ddd35d0fb6f"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.subnet_public[\"subnet-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:subnet/subnet-014d0a128d7b329d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-014d0a128d7b329d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186546413360",
            "tags": {
              "Name": "EX07-Test-Public-1",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test-Public-1",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "vpc_id": "vpc-090177ddd35d0fb6f"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.subnet_public[\"subnet-2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:subnet/subnet-0a1c3b3519efdfdff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a1c3b3519efdfdff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186546413360",
            "tags": {
              "Name": "EX07-Test-Public-2",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "tags_all": {
              "Name": "EX07-Test-Public-2",
              "Solution": "EX07",
              "Stage": "Test"
            },
            "vpc_id": "vpc-090177ddd35d0fb6f"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}